[fe] - #17168 - fix gradebook navtab spacing

--- a/html/appLms/views/coursereport/css/coursereport.css
+++ b/html/appLms/views/coursereport/css/coursereport.css
@@ -341,3 +341,7 @@ tfoot.empty td {
     font-size: 20px;
     color: #C84000;
 }
+
+.navbar--coursereport {
+    margin-top: 20px;
+}
